[package]
name = "moth_filter"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = { version = "0.13.3", features = ["zdict_builder"] }

[lib]
name = "moth_filter"
path = "src/lib.rs"

[[bin]]
name = "moth_filter"
path = "src/main.rs"
