[package]
name = "moth_filter"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = { version = "1.4", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
zstd = { version = "0.13.3", features = ["zdict_builder"], optional = true }

[features]
build-bin = ["csv", "serde_json", "zstd"]

[lib]
name = "moth_filter"
path = "src/lib.rs"

[[bin]]
name = "moth_filter"
path = "src/main.rs"
required-features = ["build-bin"]
